bzr (2.3.0-7) UNRELEASED; urgency=low

  * Switch to dh_python2.

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 07 Mar 2011 11:37:47 +0100

bzr (2.3.0-6) unstable; urgency=low

  * Support running the test suite in parallel.
  * Run selftest with -v so there is some indication of progress. This should
    prevent builds from being killed on buildds due to a lack of output.
  * Cherry-pick fix to use correct format character for unsigned int
    gc_chk_sha1_record members. Fixes FTBFS on alpha.

 -- Jelmer Vernooij <jelmer@debian.org>  Sat, 26 Feb 2011 04:07:18 +0100

bzr (2.3.0-5) unstable; urgency=low

  * Add 05_kfreebsd_tests: Enable FreeBSD kernel specific workarounds
    for Debian/kFreeBSD. Fixes FTBFS on kfreebsd-{i386,amd64}.
  * Set BZR_HOME during test run for hosts that don't have a home
    directory set.

 -- Jelmer Vernooij <jelmer@debian.org>  Fri, 25 Feb 2011 16:32:22 +0100

bzr (2.3.0-4) unstable; urgency=low

  * Use multiprocessing.cpu_count to retrieve number of CPUs if
    possible. Closes: #588853

 -- Jelmer Vernooij <jelmer@debian.org>  Wed, 23 Feb 2011 14:55:32 +0100

bzr (2.3.0-3) unstable; urgency=low

  [ Jelmer Vernooij ]
  * Bump debhelper dependency to debhelper 7.4.16, required for our use
    of --list-missing and --fail-missing.

  [ Max Bowsher ]
  * Run testsuite on bzr including compiled extensions.
  * Run testsuite on all architectures, not just when doing an
    architecture-independent build.

  [ Jelmer Vernooij ]
  * Disable launchpad plugin tests as they currently require access to
    Launchpad production. Closes: #614544

 -- Jelmer Vernooij <jelmer@debian.org>  Tue, 22 Feb 2011 15:47:00 +0100

bzr (2.3.0-2) unstable; urgency=low

  * Split python library into a separate package. Closes: #561647

 -- Jelmer Vernooij <jelmer@debian.org>  Sun, 06 Feb 2011 14:49:49 +0100

bzr (2.3.0-1) unstable; urgency=low

  * New upstream release.

 -- Jelmer Vernooij <jelmer@debian.org>  Thu, 03 Feb 2011 18:58:06 +0100
