@@ -3,7 +3,7 @@ Section: vcs
 Priority: optional
 Maintainer: Debian Bazaar Maintainers <pkg-bazaar-maint@lists.alioth.debian.org>
 Uploaders: Jeff Bailey <jbailey@raspberryginger.com>, Wouter van Heyst <larstiq@larstiq.dyndns.org>, Reinhard Tartler <siretart@tauware.de>, Jelmer Vernooij <jelmer@debian.org>, John Francesco Ferlito <johnf@inodes.org>
-Build-Depends: debhelper (>> 7.4.16), cdbs (>= 0.4.90~), python (>= 2.6.6-3), python-all-dev (>= 2.6.6-3), python-docutils, python-pyrex, python-testtools (>= 0.9.5~), python-configobj, python (>> 2.5) | python-celementtree | python-elementtree, python-subunit
+Build-Depends: debhelper (>> 7.4.16), python (>= 2.6.6-3), python-all-dev (>= 2.6.6-3), python-docutils, python-pyrex, python-testtools (>= 0.9.5~), python-configobj, python (>> 2.5) | python-celementtree | python-elementtree, python-subunit
 Standards-Version: 3.9.1
 X-Python-Version: >= 2.4
 Vcs-Bzr: http://bzr.debian.org/pkg-bazaar/bzr/unstable
