@@ -1,8 +1,9 @@
 bzr (2.3.0-7) UNRELEASED; urgency=low
 
   * Switch to dh_python2.
+  * Switch to debhelper 7, drop cdbs.
 
- -- Jelmer Vernooij <jelmer@debian.org>  Mon, 07 Mar 2011 11:37:47 +0100
+ -- Jelmer Vernooij <jelmer@debian.org>  Mon, 07 Mar 2011 12:02:02 +0100
 
 bzr (2.3.0-6) unstable; urgency=low
 
